--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="canonical" href="https://chat.text2.click/">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="media/img/logochatai.png">
-    <link rel="apple-touch-icon" href="media/img/logochatai.png">
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="apple-touch-icon" href="favicon.ico">
     
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://www.googletagmanager.com">
