--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat AI Text2</title>
-    <meta name="description" content="Text2 Chat AI">
-    <meta name="keywords" content="chat AI text2, text2, text2 chat ai, AI chat, AI assistant, Text2, free AI, chatbot, language learning, AI conversation, text2 AI">
+    <title>Text2 - Chat AI</title>
+    <meta name="description" content="Text2 - Chat AI: Trò chuyện AI miễn phí, hỗ trợ học tiếng Anh, trải nghiệm AI hiện đại từ Text2.">
+    <meta name="keywords" content="text2 - Chat ai, chat AI text2, text2, text2 chat ai, AI chat, AI assistant, Text2, free AI, chatbot, language learning, AI conversation, text2 AI">
     <meta name="author" content="Text2">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Text2 Chat AI - Free AI Assistant">
-    <meta property="og:description" content="Chat with AI Text2 - Free AI assistant for English learning and conversation. Experience the best chat AI from Text2.">
+    <meta property="og:title" content="Text2 - Chat AI | Trò chuyện AI miễn phí">
+    <meta property="og:description" content="Text2 - Chat AI: Trò chuyện AI miễn phí, hỗ trợ học tiếng Anh, trải nghiệm AI hiện đại từ Text2.">
     <meta property="og:url" content="https://chat.text2.click/">
     <meta property="og:site_name" content="Text2 Chat AI">
     <meta property="og:type" content="website">
